Fixed wrong color in person card profile

--- a/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-profile/mgt-person-card-profile.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-profile/mgt-person-card-profile.scss
@@ -140,7 +140,7 @@
       .educational-activity__degree {
         font-size: 12px;
         line-height: 14px;
-        color: set-var(color__sub3, $theme-default, $common);
+        color: set-var(color__sub4, $theme-default, $common);
       }
     }
 
