--- a/packages/mgt-components/src/styles/shared-sass-variables.scss
+++ b/packages/mgt-components/src/styles/shared-sass-variables.scss
@@ -57,11 +57,14 @@ $text__color__main--light: $black;
 $text__color__sub1--light: $gray160;
 $text__color__sub2--light: $gray120;
 $text__color__sub3--light: $gray100;
+$text__color__sub4--light: $gray130;
+
 // dark
 $text__color__main--dark: $white;
 $text__color__sub1--dark: $gray20;
 $text__color__sub2--dark: $gray60;
 $text__color__sub3--dark: $gray100;
+$text__color__sub4--dark: $gray130;
 
 /* -----Title----- */
 // light
@@ -191,6 +194,11 @@ $common: (
     _var: --color-sub3,
     dark: $text__color__sub3--dark,
     light: $text__color__sub3--light
+  ),
+  color__sub4: (
+    _var: --color-sub4,
+    dark: $text__color__sub4--dark,
+    light: $text__color__sub4--light
   ),
   background-color: (
     _var: --background-color,
